# bibliometric-analysis

./: .gitignore  README.md  pyproject.toml
src/bibliometric_analysis/: affiliations.ipynb  citations.ipynb  database.ipynb  keywords.ipynb  topics.ipynb
src/bibliometric_analysis/bibliometric/: cleaner.py  data_processing.py  helper.py  tools.py  utils.py
