[project]
name = "bibliometric-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Gwanghun Park",email = "gwanghun.park.privat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "bertopic (>=0.17.3,<0.18.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]

[tool.poetry]
packages = [{include = "bibliometric_analysis", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
